--- a/dotnet-react-app/dotnet-react-app.csproj
+++ b/dotnet-react-app/dotnet-react-app.csproj
@@ -20,6 +20,16 @@
     <Content Remove="ClientApp\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\components\Company.tsx" />
+    <None Remove="ClientApp\components\Table.tsx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\components\Company.tsx" />
+    <TypeScriptCompile Include="ClientApp\components\Table.tsx" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
