added interfaces to to components

--- a/dotnet-react-app/tsconfig.json
+++ b/dotnet-react-app/tsconfig.json
@@ -7,9 +7,9 @@
     "jsx": "react",
     "sourceMap": true,
     "skipDefaultLibCheck": true,
-    "strict": true,
+    "strict": false,
     "types": [ "webpack-env" ],
-    "noImplicitAny": false
+    "noImplicitAny": true
   },
   "exclude": [
       "bin",
